# simple_stories_train

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  convert_custom_to_hf.py  pyproject.toml
simple_stories_train/: .env.example  .gitignore  .pre-commit-config.yaml  33M_config.yaml  35M_config.yaml  convert_custom_to_hf.py  d12_config.yaml  dataloaders.py  evaluate.py  evaluate_llama.py  inspect_api.py  log.py  tokenizer.py  tokenizer_new.py  train_gpt2.py  train_llama.py  train_rwkv7.py  upload_model.ipynb  utils.py
simple_stories_train/.github/workflows/: checks.yaml
simple_stories_train/models/: llama.py  model_configs.py
simple_stories_train/models/rwkv7/: rwkv7.py
simple_stories_train/models/rwkv7/rwkv_cuda/: wkv6_op.cpp  wkv7g_op.cpp  wkv7g_v1.cu
simple_stories_train/models/rwkv7/rwkv_cuda_wind/: backstepping_f32_2.cu  tile.cuh  wind_rwkv7.cpp  wind_rwkv7.cu
simple_stories_train/scripts/: tinyshakespeare.py  train_gpt2.py  train_llama.py
simple_stories_train/scripts/train_mnist/: run_train_mnist.py
simple_stories_train/tokenizer/: bpe-stories-4096.json  simplestories-4096.json  stories-3072.json
tests/: test_dataloader.py  test_llama_implementation.py  test_llama_rotary_embedding.py  test_mlp.py  test_utils.py
